auto completion for tags in specified namespace

--- a/ExViewer/Views/EhWikiDialog.xaml
+++ b/ExViewer/Views/EhWikiDialog.xaml
@@ -11,6 +11,12 @@
                           PrimaryButtonText="Ok"
                           RequiresPointer="WhenFocused"
                           mc:Ignorable="d">
+    <controls:MyContentDialog.TitleTemplate>
+        <DataTemplate x:DataType="x:String">
+            <TextBlock Text="{x:Bind}"
+                       IsTextSelectionEnabled="True" />
+        </DataTemplate>
+    </controls:MyContentDialog.TitleTemplate>
     <Grid>
         <Border Width="500" />
         <WebView x:Name="wv"
