tag search ignore case
Former-commit-id: f7380a835b6916bdf6d6a3442c357cb0324ab401 [formerly af6492c09933f286a443016d271660007d0d6ceb]
Former-commit-id: 78e95fa6748347c993c4c86a5033818abda1e1b7

--- a/ExViewer/Themes/NamedStyles.xaml
+++ b/ExViewer/Themes/NamedStyles.xaml
@@ -346,6 +346,7 @@
             </Grid.RowDefinitions>
             <controls:HighlightTextBlock Text="{Binding Title, Mode=OneTime}"
                                          HighlightText="{Binding Highlight, Mode=OneTime}"
+                                         Comparison="OrdinalIgnoreCase"
                                          Grid.Column="1" 
                                          Grid.ColumnSpan="2"/>
             <TextBlock Text="{Binding AdditionalInfo, Mode=OneTime}"
@@ -356,6 +357,7 @@
                        Grid.Column="1" />
             <controls:HighlightTextBlock Text="{Binding Caption, Mode=OneTime}"
                                          HighlightText="{Binding Highlight, Mode=OneTime}"
+                                         Comparison="OrdinalIgnoreCase"
                                          TextBlockStyle="{StaticResource SuggestionCaptionTextBlockStyle}"
                                          Grid.Row="1"
                                          Grid.Column="2" />
