tag presenter for long tags; copy tag to clipboard
Former-commit-id: f8dcaa39c753f1f9d2ae6b86dbd27e0a1a294b4d [formerly b1043a5b61d921f18ca161682296e8a10240931a]
Former-commit-id: c551fe1b6f09a44d5b2009b2f6b326ff167cd37c

--- a/ExViewer/Themes/Generic.xaml
+++ b/ExViewer/Themes/Generic.xaml
@@ -378,6 +378,9 @@
             <Setter.Value>
                 <ControlTemplate TargetType="controls:TagPresenter">
                     <TextBlock x:Name="Presenter"
+                               TextTrimming="None"
+                               TextWrapping="NoWrap"
+                               MaxLines="1"
                                Foreground="{TemplateBinding Foreground}"
                                Padding="{TemplateBinding Padding}" />
                 </ControlTemplate>
