--- a/ExViewer/Views/PopularPage.xaml
+++ b/ExViewer/Views/PopularPage.xaml
@@ -41,7 +41,7 @@
         <tk:PullToRefreshListView x:Name="lv"
                                   Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
                                   Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x0,x1'}"
-                                  RefreshRequested="lv_RefreshRequested"
+                                  RefreshCommand="{x:Bind VM.Refresh}"
                                   RelativePanel.AlignLeftWithPanel="True"
                                   RelativePanel.AlignRightWithPanel="True"
                                   RelativePanel.AlignBottomWithPanel="True"
