tooltip for long tags
Former-commit-id: ea210c3a0af82dcf09ab9ea597dd71b891b5aade [formerly d42557d4575d3771f442d2f22c51c34460a9a6ed]
Former-commit-id: f2818c394b78f8b638ceee52055bc87c029ab4dd

--- a/ExViewer/Views/EhWikiDialog.xaml
+++ b/ExViewer/Views/EhWikiDialog.xaml
@@ -13,8 +13,13 @@
                           mc:Ignorable="d">
     <controls:MyContentDialog.TitleTemplate>
         <DataTemplate x:DataType="x:String">
-            <TextBlock Text="{x:Bind}"
-                       IsTextSelectionEnabled="True" />
+            <ScrollViewer VerticalScrollBarVisibility="Hidden"
+                          VerticalScrollMode="Disabled"
+                          HorizontalScrollBarVisibility="Hidden"
+                          HorizontalScrollMode="Auto">
+                <TextBlock Text="{x:Bind}"
+                           IsTextSelectionEnabled="True" />
+            </ScrollViewer>
         </DataTemplate>
     </controls:MyContentDialog.TitleTemplate>
     <Grid>
