--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -1,20 +1,21 @@
 ﻿<controls:MyPage x:Class="ExViewer.Views.GalleryPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:VM="using:ExViewer.ViewModels"
-      xmlns:client="using:ExClient"
-      xmlns:controls="using:ExViewer.Controls"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="using:ExViewer.Views"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:wp="using:Microsoft.Toolkit.Uwp.UI.Controls.WrapPanel"
-      x:Name="page"
-      Loading="page_Loading"
-      Unloaded="page_Unloaded"
-      NavigationCacheMode="Enabled"
-      SizeChanged="page_SizeChanged"
-      xmlns:con="using:Opportunity.Converters"
-      mc:Ignorable="d">
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:VM="using:ExViewer.ViewModels"
+                 xmlns:client="using:ExClient"
+                 xmlns:tagging="using:ExClient.Tagging"
+                 xmlns:controls="using:ExViewer.Controls"
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:local="using:ExViewer.Views"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                 xmlns:wp="using:Microsoft.Toolkit.Uwp.UI.Controls.WrapPanel"
+                 x:Name="page"
+                 Loading="page_Loading"
+                 Unloaded="page_Unloaded"
+                 NavigationCacheMode="Enabled"
+                 SizeChanged="page_SizeChanged"
+                 xmlns:con="using:Opportunity.Converters"
+                 mc:Ignorable="d">
     <controls:MyPage.Transitions>
         <TransitionCollection>
             <NavigationThemeTransition>
@@ -64,7 +65,7 @@
             <Setter Property="FontWeight"
                     Value="SemiLight" />
         </Style>
-        <DataTemplate xmlns:c="using:ExClient"
+        <DataTemplate xmlns:c="using:ExClient.Galleries.Metadata"
                       x:Key="TorrentTemplate"
                       x:DataType="c:TorrentInfo">
             <Grid>
@@ -208,7 +209,7 @@
             <Setter Property="VerticalAlignment"
                     Value="Top" />
         </Style>
-        
+
         <MenuFlyout x:Name="mfo_Tag">
             <MenuFlyoutItem Text="{Binding Content}"
                             ToolTipService.ToolTip="{Binding Content}"
@@ -225,11 +226,12 @@
                             Text="Show galleries with this tag" />
         </MenuFlyout>
         <DataTemplate  x:Key="TagTemplate"
-                       x:DataType="client:Tag">
+                       x:DataType="tagging:Tag">
             <controls:TagPresenter Padding="4,0"
                                    GalleryTag="{x:Bind}" />
         </DataTemplate>
-        <DataTemplate x:Key="TagGroupTemplate" x:DataType="client:NamespaceTagCollection">
+        <DataTemplate x:Key="TagGroupTemplate"
+                      x:DataType="tagging:NamespaceTagCollection">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition x:Uid="Views/GalleryPage/TagNamespaceColumnDefinition"
@@ -442,7 +444,7 @@
                                     </ItemsPanelTemplate>
                                 </GridView.ItemsPanel>
                                 <GridView.ItemTemplate>
-                                    <DataTemplate xmlns:c="using:ExClient"
+                                    <DataTemplate xmlns:c="using:ExClient.Galleries"
                                                   x:DataType="c:GalleryImage">
                                         <Image Width="100"
                                                MinHeight="100"
@@ -496,7 +498,7 @@
                                       Loaded="pv_Content_Loaded"
                                       SelectionMode="None">
                                 <ListView.ItemTemplate>
-                                    <DataTemplate xmlns:c="using:ExClient"
+                                    <DataTemplate xmlns:c="using:ExClient.Commenting"
                                                   x:DataType="c:Comment">
                                         <controls:CommentViewer Comment="{x:Bind}" />
                                     </DataTemplate>
