--- a/ExViewer/Views/SavedPage.xaml
+++ b/ExViewer/Views/SavedPage.xaml
@@ -60,7 +60,7 @@
                 <tk:PullToRefreshIndicator />
             </tk:PullToRefreshListView.RefreshIndicatorContent>
             <ListView.ItemTemplate>
-                <DataTemplate xmlns:c="using:ExClient"
+                <DataTemplate xmlns:c="using:ExClient.Galleries"
                               xmlns:controls="using:ExViewer.Controls"
                               x:DataType="c:Gallery">
                     <controls:GalleryViewer x:Name="gv_Gallery"
