--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -31,6 +31,22 @@
                 <x:Int32>1</x:Int32>
             </con:ObjectToBooleanConverter.ValueForTrue>
         </con:ObjectToBooleanConverter>
+        <con:NumberToBooleanConverter x:Key="SaveProgressToIsIndeterminateConverter"
+                                      RangeStart="0"
+                                      IncludeStart="True"
+                                      RangeEnd="100"
+                                      IncludeEnd="True"
+                                      InRangeResult="False" />
+        <con:ObjectToBooleanConverter x:Key="OperationStateToVisibilityConverter"
+                                    IfNeither="True"
+                                    NextConverter="{StaticResource TrueToVisibleConverter}">
+            <con:ObjectToBooleanConverter.ValueForFalse>
+                <VM:OperationState>NotStarted</VM:OperationState>
+            </con:ObjectToBooleanConverter.ValueForFalse>
+            <con:ObjectToBooleanConverter.ValueForTrue>
+                <VM:OperationState>Started</VM:OperationState>
+            </con:ObjectToBooleanConverter.ValueForTrue>
+        </con:ObjectToBooleanConverter>
 
         <Style x:Key="TorrentNameTextBlockStyle"
                TargetType="TextBlock">
@@ -640,6 +656,7 @@
         <ProgressBar x:Name="pb_save"
                      Grid.Row="1"
                      Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
+                     IsIndeterminate="{x:Bind VM.SaveProgress, Converter={StaticResource SaveProgressToIsIndeterminateConverter}, Mode=OneWay}"
                      VerticalAlignment="Top"
                      Foreground="{x:Bind VM.SaveStatus, Converter={StaticResource OperationStateToBrushConverter}, Mode=OneWay}"
                      IsHitTestVisible="False"
